views/css/main.scss
/* ... */
ol.tabs {
    background: #464646;
    display: block;
    flex: 0 1 auto;
    height: 2rem;
    margin: 0;
    min-height: 2rem;
    line-height: 2rem;
    overflow: hidden;
    padding: 0;
    position: relative;
    white-space: nowrap;

    &::after {
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        box-shadow: 0px 0px 2px 0px black inset;
        pointer-events: none;
    }

    > li.tab {
        position: relative;
        background: #666;
        display: inline-block;
        height:  1.8rem;
        line-height: 1.5rem;
        margin-left: -0.05rem;
        margin-top: 0.05rem;

        > button ,
        > a {
            background: white;
            border: 0.05rem solid #ddd;
            cursor: pointer;
            outline: none;
            color: #666;
            display: inline-block;
            padding: 0 0.5rem;
            font: 400 1rem Lato;
            height: 1.7rem;
            line-height: 1.6rem;
            min-width: 5rem;
            text-align: center;
            text-decoration: none;

            img {
                width: 1rem;
                height: 1rem;
            }
        }

        &:first-child {
            margin-left: 0.5rem;
        }

        &.active {
            height: 1.8rem;
            margin-top: 0.25rem;
            background: #333;
            box-shadow: 0px 0px 0.1875rem 0px #464646;
            z-index: 9;

            &::after {
                content: '';
                position: absolute;
                top: 0.125rem;
                left: 0.125rem;
                height: 0.25rem;
                width: calc(100% - 0.25rem);
                background: #46b1e4;
            }

            > button, 
            > a {
                color: #46b1e4;
                height: 1.8rem;
                line-height: 1.90rem;
            }
        }
    }

    &.side {
        z-index: 99;
        height: auto;
        overflow: visible;

        > li.tab {
            display: block;
            width: 1.9rem;
            height: auto;
            background: none;
            margin-left: 0;
            margin-top: 0;
            margin-left: 0.25rem;

            > button,
            > a {
                min-width: auto;
                width: 1.9rem;
                height: auto;
                overflow: hidden;
                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;
                padding: 0.5rem 0;

                img {
                    margin-bottom: 0.5rem;
                }

                span.caption {
                    left: 0.0625rem;
                    position: relative;
                    width: 1.5rem;

                    // Write sideways
                    writing-mode: vertical-lr;

                    // Flip
                    transform: scale(-1, -1);
                }
            }

            &:first-child {
                margin-top: 0.5rem;
            }

            &.active {
                left: -0.125rem;
                margin-left: 0.25rem;

                &::after {
                    width: 0.125rem;
                    height: calc(100% - 0.25rem);
                }

                > button,
                > a {
                    width: 2rem;
                    border-right: 0.125rem solid white;

                    img {
                        margin-left: 0.125rem;
                    }

                    span.caption {
                        left: 0.25rem;
                    }
                }
            }
        }

        &::after {
            display: none;
            content: '';
        }
    }
}

// Nested tabs
ol.tab-panels ol.tabs:not(.side) {
    background: #927a90;
    box-shadow: 0px 0px 4px 0px black inset;
}

ol.tab-panels {
    display: block;
    flex: 1 1 100%;
    overflow: hidden;
    margin: 0;
    padding: 0;
    position: relative;
    background-color: white;

    > li.tab-panel {
        display: flex;
        position: absolute;
        flex-direction: column;
        max-height: 100%;
        height: 100%;
        box-sizing: border-box;
        overflow: hidden;
        padding-top: 0.2rem;
        z-index: -1;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;

        &.active {
            z-index: auto;
        }
    }

    &.side {
        > li.tab-panel {
            padding-top: 0;
            padding-left: 0.2rem;
        }
    }
}
/* ... */

